--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body> 
 <!-- header start -->
 <header>
-    <a href="" class="logo">iphone</a>
+    <a href="" class="logo">Shoping</a>
     <div class="bx bx-menu" id="menu-icon"></div>
     <ul class="navbar">
 <l><a href="#shop">Shop</a></li>
